# arrt

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
scenes/: area_light.yaml  blank.yaml  bpsq.yaml  bunnies.yaml  checker_mesh.yaml  cow.yaml  cow2.yaml  cows.yaml  diamond_bunny.yaml  dragon.yaml  fish.yaml  glass_sphere.yaml  glass_teapot.yaml  materials.yaml  scene.yaml  scene2.yaml  smoke_test.yaml  sphere.yaml  spot_light.yaml  teapot.yaml  textures.yaml
src/: aabb.rs  args.rs  bvh.rs  framebuffer.rs  lib.rs  lights.rs  main.rs  math.rs  objects.rs  render.rs  scene.rs
src/lights/: area.rs  light.rs  mod.rs  point.rs  spot.rs
src/math/: mat3.rs  mat4.rs  mod.rs  range.rs  ray.rs  vec3.rs  vec4.rs
src/objects/: aabb.rs  bpatch.rs  bvh.rs  material.rs  mesh.rs  mod.rs  model.rs  object.rs  plane.rs  sphere.rs  superquadric.rs  transform.rs
src/render/: color.rs  framebuffer.rs  mod.rs  perlin.rs  pixel.rs  shade.rs  texture.rs  tracer.rs
src/scene/: camera.rs  lights.rs  material.rs  mesh.rs  mod.rs  model.rs  objects.rs  sphere.rs
tests/: smoke.rs
