[package]
name = "arrt"
version = "0.1.0"
edition = "2021"
authors = ["catfinated"]
description = "A ray tracer written in Rust"
license = "MIT"
repository = "https://github.com/catfinated/arrt"
keywords = ["raytracing", "graphics", "3d", "rendering"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
png = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
rayon = "1.12"
rand = "0.8"
image = "0.25"

[profile.release]
opt-level = 3
lto = "thin"
